[gd_scene load_steps=6 format=2]

[ext_resource path="res://tempassets/Main Characters/Mask Dude/Idle (32x32).png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.0208, 13.7081 )

[sub_resource type="Animation" id=2]
resource_name = "WalkLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.9944, 15.5744 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.52839, 1.90635 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WalkLeft = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 36.7572, 1.37825 )
shape = SubResource( 3 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
